--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(tinylog)
 
 cmake_minimum_required(VERSION 2.6)
-set(CMAKE_C_FLAGS "-std=gnu99 -g")
+set(CMAKE_C_FLAGS "-std=gnu99")
 
 add_library(tinylog STATIC src/log.c)
 
