Tweak CMAKE_C_FLAGS to accept passed in flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(tinylog)
 
 cmake_minimum_required(VERSION 2.6)
-set(CMAKE_C_FLAGS "-fPIC -std=gnu99")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -std=gnu99")
 
 add_library(tinylog STATIC src/log.c)
 
