Add ability to set log level from environment variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,12 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -std=gnu99")
 
 add_library(tinylog STATIC src/log.c)
 
+add_executable(tinylog_test src/log_test.c
+                            src/log.c)
+
 install(TARGETS tinylog
 	DESTINATION lib)
 install(FILES src/log.h
 	DESTINATION include)
+install(TARGETS tinylog_test
+    DESTINATION bin)
